<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">РЭА</string>
    <string name="NameOwner">Заказчик:</string>
    <string name="InnOwner">ИНН:</string>
    <string name="CommentObject">Комментарий:</string>
    <string name="AdressObject">Адрес:</string>
    <string name="EnterNewOwner">Новый Заказчик:</string>
    <string name="EnterEDitOwner">Текущий Заказчик:</string>
    <string name="AdressOwner">Адрес Заказчика:</string>
    <string name="NumberZnakInn">10 знаков</string>
    <string name="exit">Вы хотите выйти ???</string>
    <string name="help">Справка</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="Cancel">Отмена</string>
    <string name="exitapplication">Вы хотите выйти из приложения ?</string>
    <string name="EnterNewObject">Новый обьект:</string>
    <string name="objectName">Наименование обьекта:</string>
    <string name="numberDogovor">Номер Договора:</string>
    <string name="EnterEditObject">Редактирование обьекта:</string>
    <string name="NoInternet">Нет подключения к интернету</string>
    <string name="nameOwnerNoZero">Имя Заказчика не может быть пустым !!!</string>
    <string name="TypeMercuriy230">Меркурий 230 А</string>
    <string name="noaddpribor">Добавлять нечего !!!</string>
    <string name="nocurrentusb">Устройство не подключено !!!</string>
    <string name="curentstop">Дождитесь окончания работы !!!</string>
    <string name="nopribor">Счетчиков нет !!!</string>
    <string name="nosave">Сохранять нечего !!!</string>
    <string name="noport">Невозможно открыть порт</string>

</resources>
