<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/EnterNewOwner"
     />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/InnOwner"
              android:layout_gravity="center_horizontal"
    />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/editNumInn"
                android:inputType="number"
                android:lines="1"
                android:numeric="integer"
                android:hint="@string/NumberZnakInn"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="..."
                android:id="@+id/innSearch"/>
    </LinearLayout>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/NameOwner"
              android:layout_gravity="center_horizontal"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/NameObject"
              android:layout_gravity="center_horizontal"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText10"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/AdressObject"
              android:layout_gravity="center_horizontal"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText8"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/CommentObject"
              android:layout_gravity="center_horizontal"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@android:string/yes"
            android:id="@+id/yesAdd"/>
</LinearLayout>