<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal">
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/NameTextObject"
                android:text="@string/EnterNewObject"
                android:focusable="false"
        />
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/yes"
                android:id="@+id/ObjectAdd"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cancel"
                android:id="@+id/ObjectNo"/>
    </LinearLayout>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/objectName"
              android:layout_gravity="center_horizontal"


    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/ObjectNameEditAdd"

            android:singleLine="true"
            android:imeOptions="actionDone"

    />


    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/numberDogovor"
              android:layout_gravity="center_horizontal"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ObjectDogovor"
            android:singleLine="true"
            android:imeOptions="actionDone"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/AdressObject"
              android:layout_gravity="center_horizontal"
    />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/ObjectAddress"
                android:singleLine="true"
                android:imeOptions="actionDone"
        />
        <ImageButton android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/settingslocationicon"
                     android:id="@+id/addressGps"
                     android:background="@drawable/search_selector"/>
    </LinearLayout>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/CommentObject"
              android:layout_gravity="center_horizontal"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ObjectComment"
            android:singleLine="true"
            android:imeOptions="actionDone"
    />
</LinearLayout>
