<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/list_item_selector"
>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/NameOwner"
                  android:textColor="@color/red"/>
        <TextView android:paddingLeft="20dp"
                  android:focusable="false"
                  android:paddingBottom="5dp"
                  android:paddingTop="5dp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/nameOwner"
                  android:textColor="@color/white"

        />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/InnOwner"
                  android:textColor="@color/red"/>
    <TextView android:paddingLeft="20dp"
              android:focusable="false"
              android:paddingBottom="5dp"
              android:paddingTop="5dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/InnOwner"
              android:textColor="@color/white"
    />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/AdressOwner"
                  android:textColor="@color/red"/>
    <TextView android:paddingLeft="20dp"
              android:focusable="false"
              android:paddingBottom="5dp"
              android:paddingTop="5dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/AdressOwner"
              android:textColor="@color/white"

    />
    </LinearLayout>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/CommentObject"
              android:textColor="@color/red"/>
    <TextView android:paddingLeft="20dp"
              android:focusable="false"
              android:paddingBottom="5dp"
              android:paddingTop="5dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/CommentOwner"
              android:textColor="@color/white"

    />
</LinearLayout>